{{$NEXT}}

1.24     2016-08-13

- Set the INSTALLDIRS to 'perl' for Perl 5.10 and earlier. Without this, you
  can upgrade Time::Local from CPAN but perl will not see the upgraded
  version. Reported by Olivier Mengué. RT #116825.


1.2300  2012-07-20

- Doh, fix the repo & bugtracker info in the META files.


1.2200  2012-07-09

- Explicitly require Test::More 0.88+ for tests.


1.2100  2012-07-09

- A seconds value greater than 59 but less than 60 caused timegm() and
  timelocal() to croak. Now we allow any value that's less than 60. RT #78189.


1.2000  2011-01-02

- Release 1.1902 as a stable version without any further chances.


1.1902  2010-12-16  TRIAL RELEASE

- Merge all changes from blead perl.
- Try to restore compatibility with older perls, which don't have a 64bit
  capable localtime/gmtime.


1.1901  2008-11-01

- Test fixes only. The tests planned the wrong number of tests on
  32-bit platforms, causing failures.


1.19    2008-11-01

- The calculation of the maximum integer size was using
  $Config{intsize} when it should use $Config{ivsize}. Apparently on a
  64-bit platform intsize can be 4 when ivsize is 8. Based on a patch
  from Jan Dubois.


1.18    2007-10-31

- Added pod and pod coverage tests.

- Doing a new release to provide a conformant META.yml file.

- This release contains no code changes from 1.17.


1.17    2007-01-25

- I made the same test count mistake as was in 1.14 again. This
  release fixes the test count (again) when running on a system that
  doesn't support negative epochs (like Win32). Patched by Kenichi
  Ishigaki (again).


1.16    2007-01-23

- The leap year fix in 1.14 was pretty broken, as it checked after
  converting the year to Perl's internal (year - 1900) format.


1.15    2007-01-22

- Fix Local.t test count when running on a system that doesn't support
  negative epochs (like Win32). Patched by Kenichi Ishigaki.


1.14    2007-01-21

- Fixed leap year check to produce the right answer for years outside